--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   }
 }
